--- a/stream-cep-poc/README.adoc
+++ b/stream-cep-poc/README.adoc
@@ -1,116 +1,139 @@
 = POC on Streaming & CEP with Strimzi and BRMS
+:toc:
 
-== Configure OCP Cluster Environment 
+== Configure OCP Cluster Environment & KAFKA Cluster
 
-=== Local - Start OpenShift cluster
+Read instructions for 
 
-Start a local OpenShift cluster using the oc tool.
-
-oc cluster up
-oc login -u system:admin
-oc new-project strimzi-cep-poc
-
- You could use the minishift tool as well.
+* * link:https://github.com/skoussou/streaming-cep/blob/master/README-Setup-KAFKA-Cluster.adoc[Ephemeral - KAFKA Cluster Setup]
+* link:https://github.com/skoussou/streaming-cep/blob/master/README-Setup-Persistent-KAFKA-Cluster.adoc[Persistent - KAFKA Cluster Setup]
 
 
-=== AWS - Start OpenShift cluster
 
-*TBD* - Raif to provide scripts and instructions
+== Deploy the applications
 
-== Configure KAFKA Cluster Environment on OCP
-
-=== Download Strimzi and extract it
-
-[source, sh]
-----
-wget https://github.com/strimzi/strimzi/releases/download/0.5.0/strimzi-0.5.0.tar.gz
-tar xzvf strimzi-0.5.0.tar.gz
-----
-
-Enter the `strimzi-0.3.0` directory.
-
-[source, sh]
-----
-cd strimzi-0.5.0
-----
-
-Set in the config files the namespace to which objects will be created in (ie. replace <my-namespace> below with strimzi-cep-poc)
-[source, sh]
-----
-sed -i 's/namespace: .*/namespace: <my-namespace>/' examples/install/cluster-operator/*ClusterRoleBinding*.yaml
-----
-
-Log in as OCP cluster administrator to install Strimzi
-(use the password provided by the lab instructors):
+=== To point an application to the correct cluster
 
 [source,sh]
 ----
-oc login -u admin https://localhost:8443
+    spec:
+      containers:
+        - name: stream-app
+          image: strimzilab/stream-app:latest
+          env:
+            - name: BOOTSTRAP_SERVERS
+              value: "my-cluster-kafka-bootstrap:9092"
 ----
 
+### FOR THE DEMONSTRATION AT RHTE 2018 we need
+a) Use the *strimzi-persistent* template
+b) Further tune KAFKA
+c) Create topics (see below) which are relevant to our application
 
-=== Install the cluster operator and strimzi templates
 
-[source, sh]
-----
-oc create -f examples/install/cluster-operator
-oc create -f examples/templates/cluster-operator
-----
+=== Create topics
 
-if at any point you need to delete all created objects
-
-[source, sh]
-----
-oc delete -f examples/install/cluster-operator
-oc delete -f examples/templates/cluster-operator
-----
-
-The service account `strimzi-cluster-controller` is granted permission to access various resources in the project.
-This allows it to read the config maps containing the cluster configuration that we will create later in the process.
-
-Now, make sure that the cluster controller is deployed.
+This demo uses a couple of topics. The first one named `iot-temperature` is used by the device simulator for sending 
+temperature values and by the stream application for getting such values and processing them. The second one is the 
+`iot-temperature-max` topic where the stream application puts the max temperature value processed in the specified time 
+window.
+In order to create these topics in the Kafka cluster, the Topic Controller can be used. Running the following command, a 
+file containing two topic ConfigMaps is deployed to the OpenShift cluster and used by the Topic Controller for creating 
+such topics.
 
 [source,sh]
 ----
-oc get pods
+oc create -f ./stream-app/resources/topics.yml
 ----
 
-==== Deploy an ephemeral KAFKA cluster. In this case the Kafka logs are stored in a volume at Pod level so all the messages are lost when the Pod shutdown.
+![topics](images/topics.png)
+
+In order to check that the topics are properly created on the Kafka cluster, it's possible to use the `kafka-topics.sh` script 
+(distributed with Kafka) running it on one of the broker.
 
 [source,sh]
 ----
-oc new-app strimzi-ephemeral
+oc rsh my-cluster-kafka-0
+/opt/kafkabin/kafka-topics.sh --zookeeper my-cluster-zookeeper:2181[0 this can be also 1, 2 or whichever zookeeper pod rsh in] --list
 ----
 
-Show the running pods which are started by the underlying StatefulSets created by the Cluster Controller.
+- name: BOOTSTRAP_SERVERS
+              value: "my-cluster-kafka-bootstrap:9092"
+
+The output of the above command should be something like the following showing the created topics.
 
 [source,sh]
 ----
-watch oc get pods
+iot-temperature
+iot-temperature-max
 ----
 
-Show the cluster config map which is created by the above template.
+## Deploy the consumer application
+
+The consumer application uses Kafka client in order to get messages from the `iot-temperature-max` topic and showing them 
+in a Web UI.
+It's deployed running following command :
 
 [source,sh]
 ----
-oc get cm my-cluster -o yaml
+oc create -f ./consumer-app/resources/consumer-app.yml
 ----
 
-==== Update Cluster [OPTIONAL]
+A route is provided in order to access the related Web UI.
 
-Increase the number of Kafka brokers from 3 to 5 updating the kafka-nodes data field in the my-cluster config map.
+![route](images/route.png)
+
+![web ui](images/web_ui.png)
+
+## Deploy the stream application
+
+The stream application uses Kafka Streams API reading from the `iot-temperature` topic, processing its values and then 
+putting the max temperature value in the specified time window into the `iot-temperature-max` topic.
+It's deployed running following command :
 
 [source,sh]
 ----
-oc edit cm my-cluster
+oc create -f ./stream-app/resources/stream-app.yml
 ----
 
+## Deploy the device application
 
-Show the running pods; two more Pods are started.
+The device application provides a device simulator which sends temperature values to the `iot-temperature` topic.
 
 [source,sh]
 ----
-watch oc get pods
+oc create -f ./device-app/resources/device-app.yml
+----
+
+Once deployed, it starts just one pod simulating one device.
+
+![one device gauge](images/one_device_gauge.png)
+
+it's possible to scale up the number of pods in order to simulate more devices sending temperature values (each one with 
+a different and randomly generated id).
+
+![scale up device](images/scale_up_device.png)
+
+Opening the consumer Web UI it's possible to see the "gauges" charts showing the processed max temperature values for all the 
+active devices on the left side. The right side is useful to see the log of the incoming messages from devices, showing the 
+device id alongside the max temperature value processed by the stream application for such a device.
+
+![more device gauges](images/more_device_gauges.png)
+
+## Clean up
+
+If you want it could be useful to clean up the current deployment deleting all the related resources in terms of Pods, Services, Routes and Deployments.
+
+[source,sh]
+----
+oc delete all -l app=iot-demo
+----
+
+And finally the topic config maps
+
+[source,sh]
+----
+oc delete cm -l strimzi.io/kind=topic
 ----
 
 
